--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "pkg": "npm run build && node runPkg.js",
     "server": "cd ./server && node ./main.js"
   },
+  "type": "module",
   "dependencies": {
     "@emotion/cache": "latest",
     "@emotion/react": "latest",
@@ -19,24 +20,30 @@
     "@mui/material": "latest",
     "@mui/material-nextjs": "latest",
     "@mui/material-pigment-css": "latest",
+    "@mui/x-date-pickers": "^7.27.3",
     "@types/node": "latest",
     "@types/react": "latest",
     "@vitejs/plugin-react": "latest",
+    "axios": "^1.8.1",
+    "bip39": "^3.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
+    "express": "^4.21.2",
+    "hdkey": "^2.1.0",
+    "lowdb": "^7.0.1",
     "next-themes": "^0.4.4",
     "path": "latest",
+    "playwright": "^1.50.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "latest",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "tronweb": "^6.0.1",
     "use-sync-external-store": "latest",
-    "zustand": "latest",
-    "axios": "^1.8.1",
-    "cors": "^2.8.5",
-    "express": "^4.21.2",
-    "playwright": "^1.50.1"
+    "zustand": "latest"
   },
   "devDependencies": {
     "@types/node": "^22",
