--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "tailwindcss-animate": "^1.0.7",
     "tronweb": "^6.0.1",
     "use-sync-external-store": "latest",
-    "zustand": "latest"
+    "zustand": "latest",
+    "framer-motion": "^11.0.8"
   },
   "devDependencies": {
     "@types/node": "^22",
