add typeScript support

--- a/server/tasks.json
+++ b/server/tasks.json
@@ -1,9 +1,9 @@
 [
   {
-    "updatedAt": "2025-03-10T14:33:30.148Z",
+    "updatedAt": "2025-03-11T13:51:30.629Z",
     "id": "1741359272899-5r2qdjfej",
     "type": "search",
-    "status": "paused",
+    "status": "idle",
     "keywords": [
       "比特币",
       "合约爆仓",
