--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "vite build",
     "start": "vite start",
     "pkg": "npm run build && node runPkg.js",
-    "server": "cd ./server && node ./main.js"
+    "server": "cd ./server && tsx ./main.ts"
   },
   "type": "module",
   "dependencies": {
@@ -21,7 +21,6 @@
     "@mui/material-nextjs": "latest",
     "@mui/material-pigment-css": "latest",
     "@mui/x-date-pickers": "^7.27.3",
-    "@types/node": "latest",
     "@types/react": "latest",
     "@vitejs/plugin-react": "latest",
     "axios": "^1.8.1",
@@ -31,9 +30,11 @@
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "express": "^4.21.2",
+    "framer-motion": "^11.0.8",
     "hdkey": "^2.1.0",
     "lowdb": "^7.0.1",
     "next-themes": "^0.4.4",
+    "node-cron": "^3.0.3",
     "path": "latest",
     "playwright": "^1.50.1",
     "react": "^19.0.0",
@@ -43,14 +44,18 @@
     "tailwindcss-animate": "^1.0.7",
     "tronweb": "^6.0.1",
     "use-sync-external-store": "latest",
-    "zustand": "latest",
-    "framer-motion": "^11.0.8"
+    "zustand": "latest"
   },
   "devDependencies": {
-    "@types/node": "^22",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
+    "@types/lowdb": "^1.0.15",
+    "@types/node": "^22.13.9",
+    "@types/node-cron": "^3.0.11",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react-swc": "^3.8.0",
+    "esbuild": "^0.25.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
     "typescript": "^5",
