--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "path": "latest",
     "playwright": "^1.50.1",
     "react": "^19.0.0",
+    "react-activation": "^0.13.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "latest",
     "tailwind-merge": "^2.5.5",
